# FinTweet-ML

./: .gitignore  180DAY_TRAINING_RESULTS.md  1M_volume.csv  2025_TRAINING_RESULTS.md  ARCH.md  COMPLETE_ABLATION_STUDY.md  ENRICHMENT_DEMO.md  FINBERT_TRAINING_PLAN.md  LICENSE  PIPELINE_VALIDATION_REPORT.md  README.md  ROADMAP.md  TODO.md  TODO_MICHAEL.MD  TRAINING_RESULTS.md  USAGE.md  __init__.py  consistency_test_results.csv  convert_discord_to_csv.py  discord_to_csv.py  enrich_tweets.py  fetch_historical_data.py  filter_by_volume.py  helpers.py  ib_fetcher.py  pyproject.toml  requirements.txt  run_consistency_test.sh  technical_indicators.py  test_enrichment.py  test_timezone.py  view_feather.py
.github/workflows/: test.yml
data/: stock_metadata.json
discrod_data/: AI_INVEST_ISRAEL.txt  AI_INVEST_ISRAEL_OLD.txt
docs/: ARCHITECTURE.md  COMPLETE_ABLATION_STUDY.md  DATASET.md  PHASE2_ABLATION_RESULTS.md  RESULTS.md  TRAIN_RESULTS.md  TWEET_ENRICHMENT.md  TWITTER_FETCH.md
notebooks/: colab_training.ipynb  phase0_validation.ipynb  phase2_feature_engineering.ipynb
scripts/: cross_dataset_eval.py  deal_finder.py  evaluate_by_confidence.py  evaluate_weekly_walk_forward.py  preprocess_tweet_sentiment.py  stock_deal_scanner.py  validate_dataset.py  walk_forward_validation.py  weekly_walk_forward.py
src/tweet_classifier/: __init__.py  config.py  dataset.py  ensemble.py  evaluate.py  evaluate_ensemble.py  model.py  train.py  trainer.py
src/tweet_classifier/data/: __init__.py  loader.py  splitter.py  weights.py
src/tweet_enricher/: __init__.py  cli.py  config.py
src/tweet_enricher/core/: __init__.py  dataset_builder.py  enricher.py  indicators.py
src/tweet_enricher/data/: __init__.py  cache.py  cache_reader.py  ib_fetcher.py  stock_metadata.py  tickers.py
src/tweet_enricher/io/: __init__.py  csv_writer.py  feather.py
src/tweet_enricher/market/: __init__.py  regime.py  session.py
src/tweet_enricher/parsers/: __init__.py  discord.py
src/tweet_enricher/text/: __init__.py  cleaner.py  message.py
src/tweet_enricher/twitter/: __init__.py  client.py  database.py  sync.py
src/tweet_enricher/utils/: __init__.py  timezone.py
tests/: __init__.py  test_data_binding.py  test_enrichment.py  test_pipeline_validation.py  test_timezone.py  test_timezone_utils.py  test_tweet_classifier.py  tweeterapiio_test.py
