[project]
name = "ib-historical-data-fetcher"
version = "1.0.0"
description = "Fetch historical OHLCV data from Interactive Brokers"
requires-python = ">=3.11"
dependencies = [
    "ib_async>=1.0.0",
    "pandas>=1.5.0",
]

# Black configuration - code formatter
[tool.black]
line-length = 140
target-version = ['py311', 'py312']
include = '\\.pyi?$'
exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# MyPy configuration - type checking
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = "(^tests/|setup\\.py$)"

# Pydocstyle configuration - docstring style checking
[tool.pydocstyle]
ignore = ["D100", "D104", "D203", "D403", "D213", "D107", "D401", "D406", "D407", "D413", "D212", "D400", "D415"]

# Flake8 configuration - linting
[tool.flake8]
max-line-length = 140
ignore = ["W503", "W504", "E402", "E203"]

[tool.darglint]
docstring_style = "google"
strictness = "short"

