[project]
name = "fintweet-ml"
version = "0.1.0"
description = "ML pipeline for enriching financial tweets with market data and sentiment classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ib-async>=1.0.0",
    "pandas>=1.5.0",
    "pandas-ta>=0.3.14b",
    "pandas-market-calendars>=4.0.0",
    "pytz>=2023.3",
    "lxml>=4.9.0",
    "pyarrow>=14.0.0",
    "yfinance>=0.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "flake8-pyproject>=1.2.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "pydocstyle>=6.0.0",
    "darglint>=1.8.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.26.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.scripts]
fintweet-ml = "tweet_enricher.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Black configuration - code formatter
[tool.black]
line-length = 140
target-version = ['py311', 'py312']
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# MyPy configuration - type checking
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = "(^tests/|setup\\.py$)"

# Flake8 configuration - linting
[tool.flake8]
max-line-length = 140
ignore = ["W503", "W504", "E402", "E203"]

# Pydocstyle configuration - docstring style checking
[tool.pydocstyle]
ignore = ["D100", "D104", "D203", "D403", "D213", "D107", "D401", "D406", "D407", "D413", "D212", "D400", "D415"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

